# app_server/internal/models/models.go
@@ -18,22 +18,6 @@ type Category struct {
 	// Subcategories []Category
 }
 
-type PublishedAdvertisement struct {
-	ID           string `db:"id"`
-	UserID       string `db:"user_id"`
-	UserName     string `db:"user_name"`
-	StatusID     string `db:"status_id"`
-	StatusName   string `db:"status_name"`
-	CategoryID   string `db:"category_id"`
-	CategoryName string `db:"category_name"`
-	CreatedAt    string `db:"created_at"`
-	LastUpd      string `db:"last_upd"`
-	Title        string `db:"title"`
-	Description  string `db:"description"`
-	Price        string `db:"price"`
-	ContactInfo  string `db:"contact_info"`
-}
-
 type UserAdvertisement struct {
 	ID           string `db:"id"`
 	UserID       string `db:"user_id"`
